added reality check
